# sfont-manager

./: Cargo.toml  README.md
src/: app.rs  library.rs  main.rs  profile.rs  ui.rs
